# VIE

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  TriTone.sln  TriTone.vcxproj  TriTone.vcxproj.filters  Vie.sln  build.ps1  packages.config  readme.md  sonar-project.properties
.github/workflows/: build.yml
Sources/: Application.h  Constants.h  FrequencyParameter.cpp  FrequencyParameter.h  IParameterListener.h  PluginFactory.cpp  TriToneController.cpp  TriToneController.h  TriToneProcessor.cpp  TriToneProcessor.h  TriToneView.cpp  TriToneView.h
Sources/Resources/: desktop.ini
Sources/Third-parties/: json.hpp
U.I./: Guardfile  readme.txt
U.I./application/: actions.rb  atome_experimental.rb  backup.rb  callbacks.rb  communication.rb  data_for_test.rb  demo_methods.rb  dummy_file.rb  events.rb  experimental_api.rb  fake_data.rb  index.rb  index2compare.rb  indexsafe.rb  matrix_events.rb  styles.rb  tool_box.rb  tool_methods.rb  ui_template.rb  utilities.rb  version.rb
U.I./application/Application/unused/: data_for_test.rb
U.I./application/unused/: data_for_test.rb
U.I./js/: application.js  aui.js
U.I./js/atome/: kernel.js
U.I./js/opal/: atome_opal_extensions.js
U.I./src/: index.html
U.I./src-tauri/: Cargo.toml  tauri.conf.json
U.I./src/data/: examples.json
U.I./src/js/: application.js  aui.js  infos.js
U.I./src/js/atome/: kernel.js
U.I./src/js/mockup/: mockup.js
U.I./src/js/opal/: opal_browser.js  opal_parser.js
U.I./src/utilities/: aui.rb  mode.rb
U.I./tmp/application/: backup.rb  eVe_add_on.rb  fake_class.rb  index.rb  version.rb
U.I./utilities/: aui.rb
Vie/: AlignModel.hpp  Application.cpp  Application.h  BasicThumbModel.hpp  BasicTrackModel.hpp  CMakeLists.txt  ColorModel.hpp  Constants.h  DialModel.hpp  FrequencyParameter.cpp  FrequencyParameter.h  Logger.cpp  Logger.h  MarginModel.cpp  MarginModel.h  MarginModel.hpp  MinSizeModel.hpp  Model.hpp  PaneModel.hpp  PluginFactory.cpp  SliderLabelsModel.hpp  SliderMarksModel.hpp  SliderModel.hpp  StretchModel.hpp  TileModel.hpp  Vie.vcxproj  Vie.vcxproj.filters  VieController.h  VieProcessor.h  VieView.cpp  VieView.h  desktop.ini  ui.json
Vie/windows/: Application.cpp
documentation/: ClassDiagram.cd
src/: Application.h  Application.hpp  Bus.cpp  Bus.h  Bus.hpp  CMakeLists.txt  Constants.h  Constants.hpp  FrequencyParameter.cpp  FrequencyParameter.h  IParameterListener.h  Logger.cpp  Logger.h  Logger.hpp  NkDiligent.cpp  NkDiligent.h  Node.cpp  Node.h  NodeEditor.cpp  NodeEditor.h  NodeLink.cpp  NodeLink.h  NodeLinking.cpp  NodeLinking.h  Parameter.cpp  Parameter.h  Parameter.hpp  PluginFactory.cpp  UserInterface.cpp  UserInterface.h  UserInterfaceStyle.cpp  UserinterfaceStyle.h  VieController.cpp  VieController.h  VieProcessor.cpp  VieProcessor.h  VieView.cpp  VieView.h  VstPluginFactory.cpp  VstPluginFactory.h  (+66 more)
src/assets/config/: default_instrument (2).json  default_instrument.json
src/assets/samples/: 1.pkf
src/assets/view/: index.html
src/assets/view/js/: application.js  aui.js
src/assets/view/js/atome/: kernel.js
src/assets/view/js/atome_libraries/: animator_helper.js
src/assets/view/js/dynamic_libraries/: atome_app.js  atome_medias.js
src/assets/view/js/mockup/: mockup.js
src/assets/view/js/opal/: atome_opal_extensions.js  opal.js  opal_browser.js  opal_parser.js
src/assets/view/js/third_parties/: README.md  wad.js  xsound.min.js
src/assets/view/js/third_parties/jquery/: jquery.pep.js
src/assets/view/medias/projects/vie/: index.rb  index_bck.rb
src/assets/view/old/: index.html.old
src/assets/view/old/js/: webview_communication_example.js
src/assets/view/old/js/atome_libraries/: index.js
src/assets/view/old/js/dynamic_libraries/: atome.js  atome_app.js  atome_medias.js
src/assets/view/old/js/dynamic_libraries/opal/: opal_jquery.js  opal_parser.js
src/assets/view/old/js/third_parties/jquery/: roundslider.min.js
src/assets/view/old/medias/projects/vie/: ok.rb  slider.rb  tests.rb  touch_bck.rb  vie_add_on.rb  vie_style.rb  vie_utils.rb
src/assets/view/v0.1/js/: application.js
src/assets/view/v0.1/js/atome/: atome.js  kernel.js
src/components/: audio_input.cpp  audio_input.hpp  audio_output.cpp  audio_output.hpp  envelope.cpp  envelope.hpp  gain.cpp  gain.hpp  high_pass.cpp  high_pass.hpp  low_pass.cpp  low_pass.hpp  midi.cpp  midi.hpp  midi_input.cpp  midi_input.hpp  mixer.cpp  mixer.hpp  multiplier.cpp  multiplier.hpp  noise.cpp  noise.hpp  oscillator.cpp  oscillator.hpp  output.cpp  output.hpp  python_scripter.cpp  recorder.cpp  recorder.hpp  sample.cpp  sample.hpp  scripter.hpp
src/ios/: application.cpp  editor_view.cpp  editor_view.hpp
src/modules/: audio_input.cpp  audio_input.hpp  audio_output.cpp  audio_output.hpp  envelope.cpp  envelope.hpp  gain.cpp  gain.hpp  high_pass.cpp  high_pass.hpp  low_pass.cpp  low_pass.hpp  midi_input.cpp  midi_input.hpp  mixer.cpp  mixer.hpp  module_descriptor.hpp  module_view_descriptor.hpp  multiplier.cpp  multiplier.hpp  noise.cpp  noise.hpp  oscillator.cpp  oscillator.hpp  recorder.cpp  recorder.hpp  sample.cpp  sample.hpp
src/resource/: editor.uidesc
src/vst/: vst_controller.cpp  vst_controller.hpp  vst_plugin.hpp  vst_plugin_factory.cpp  vst_plugin_factory.hpp  vst_processor.cpp  vst_processor.hpp  vst_view.cpp  vst_view.hpp
src/windows/: Application.cpp  editor_view.cpp  editor_view.hpp  vst_host_callback.cpp  vst_host_callback.hpp
tests/: CMakeLists.txt  audio_in_tests.cpp  editor_view_tests.cpp  project_management_tests.cpp
tests/assets/config/: test_audio-in.json  test_recorder.json
